Added window (sample and test) app Updated gitignore file to exclude node_modules Some relatively minor other updates

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,12 @@ js/old
 [Rr]elease*/
 _ReSharper*/
 [Tt]est[Rr]esult*
+
+#################
+## npm
+#################
+
+npm-debug.log
+node_modules/
+!/node_modules/
+!src/node_modules/
